# yawrungay

./: .config.yaml.example  .coverage  .gitignore  .phrases.example  AGENTS.md  README.md  main.py  pyproject.toml
scripts/: transcribe_mic.py
src/yawrungay/: __init__.py  __main__.py  main.py
src/yawrungay/actions/: __init__.py  base.py  executor.py  keyboard.py  mouse.py  shell.py
src/yawrungay/audio/: __init__.py  capture.py  devices.py  processing.py
src/yawrungay/config/: __init__.py  defaults.py  schema.py  settings.py
src/yawrungay/parsing/: __init__.py  base.py  parser.py  patterns.py  phrases.py
src/yawrungay/recognition/: __init__.py  base.py  faster_whisper.py  vosk.py
src/yawrungay/utils/: __init__.py
tests/: test_actions.py  test_audio_capture.py  test_audio_devices.py  test_audio_processing.py  test_config.py  test_monitor.py  test_parsing.py  test_phrase_recognition.py  test_recognition.py  test_utils.py
