[project]
name = "yawrungay"
version = "0.1.0"
description = "A privacy-focused, offline voice assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyaudio>=0.2.13",
    "SpeechRecognition>=3.10.0",
    "numpy>=1.26.0",
    "faster-whisper>=1.2.1",
    "pyyaml>=6.0",
    "vosk>=0.3.45",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yawrungay"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src/yawrungay --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
